# CUG-CS-Course-Project

./: LICENSE  README.md
Ai/: AI实验小结_深度版.docx  AI实验小结_深度版.md  README_转换器.md  md_to_word_converter.py  requirements.txt  实验小结.md
Ai/work1/: astar.cpp  astar.h  graph.cpp  graph.h  greedy.cpp  greedy.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  searchalgo.cpp  searchalgo.h  ucs.cpp  ucs.h  work1_new.pro  work1_new.pro.user.7b53d73  罗马尼亚度假问题启发函数值.txt  罗马尼亚度假问题地图及启发函数值.xlsx
Ai/work2/: chessboard.cpp  chessboard.h  mainwindow.cpp  mainwindow.h  nqueenssolver.cpp  nqueenssolver.h  work2.pro
Ai/work3p/: README.md  work3p.py  wumpus_world_step.py
Ai/work4p/: README.md  requirements.txt  work4p.py
Ai/work5p/: tictactoe.py  work5p.py
Ai/work6p/: README.md  gui.py  gui_new.py  mcts.py  neural_network.py  requirements.txt  reversi.py  train.py
Ai/work7p/: README.md  work7p.py
Ai/work8p/: README.md  requirements.txt  work8p.py  模型1.pth
CG/191231-焦熙鹏/: work1.cpp  work2.cpp  work4.cpp  实验报告1.docx  实验报告2.docx  实验报告4.docx
CG/work 2/: README.md  work 2.sln  work 2.vcxproj  work 2.vcxproj.filters  work 2_简化版.cpp  work2p.cpp  上机报告.md  使用说明.md  实验报告.md  实验报告_Sutherland-Hodgeman多边形裁剪.md  实验报告_多边形裁剪算法_新版.md
CG/work1/: work1.sln  work1.vcxproj  实验1 OpenGL及基本图形生成算法.docx  抛物线中点.md
CG/work1ppp/: experiment1_basic_primitives.cpp  experiment2_bresenham_line.cpp  experiment3_circle_ellipse.cpp  experiment4_x_scanline.cpp  experiment5_active_edge_table.cpp
CG/work1pppp/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  t1.cpp  t2.cpp  t3.cpp  t4.cpp  work1pppp.sln  work1pppp.vcxproj  work1pppp.vcxproj.filters
CG/work2ppp/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
CG/work3/: CG03_2.cpp  work3.cpp  实验报告.md
CG/work3p/: work3.cpp  work3p.sln  work3p.vcxproj  work3p.vcxproj.filters  实验报告3.docx
CsNetwork/: ~$算机网络报告.doc  串口通信基础.pptx  从无到有的构建计算机网络.docx  计算机网络报告 - 副本.doc  计算机网络报告.doc  计算机网络知识点.docx
SE/: 残疾人基金会系统架构设计(2).docx
SE/ecyj/: README.md  (+39 more)
SE/work1/: .gitignore  AutoDL使用指南.md  CMakeLists.txt  README.md  autodl_deploy.sh  停止服务_AutoDL.sh  启动并打开浏览器.bat  启动服务_AutoDL.sh  启动服务器.bat  项目说明.txt
SE/work1/images/: README.md
SE/work1/src/: main.cpp
database/: 数据库题库.docx  数据库题库1.docx
(+512 files in other folders)
